--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cors",
+  "name": "fauna-deploy-test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "faunadb": "^4.7.1",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
